[package]
name = "forte_engine"
description = "A core for a basic render/game engine designed to have little overhead."
license = "MIT"
version = "0.1.1"
edition = "2021"
exclude = ["*.md"]

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = [ "png", "jpeg" ]

[package.metadata.wgsl]
include = ["shaders/*.wgsl"]