[package]
name = "forte_engine"
description = "A core for a basic render/game engine designed to have little overhead."
license = "MIT"
version = "0.2.1"
edition = "2021"
exclude = ["*.md"]

[dependencies]
winit = "0.29.10"
log = "0.4"
wgpu = "0.19.1"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0"
include-wgsl-oil = "0.2.4"
fxhash = "0.2.1"
glyphon = "0.5.0"
gltf = "1.4.0"
egui = "0.26.0"
egui-wgpu = { version = "0.26.0", features = ["winit"] }
egui-winit = { version = "0.26.0", default-features = false }
cfg-if = "1.0.0"
env_logger = "0.11.2"
web-time = "1.0.0"

[dependencies.image]
version = "0.24"
default-features = false
features = [ "png", "jpeg" ]

[package.metadata.wgsl]
include = ["shaders/*.wgsl"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19.1", default-features = false, features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
